# ycore

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  LICENSE  README.md  yui.bat  yui.sh
0_bin/Lnx64/: AutoTable2Code  amqp_demo  amqp_send  client_demo  example.xml  libevent-2.1.so.7  libevent_demo  odbc-demo  server  spdlog_demo  test.tmp  testLog.csv  tinyxml_demo  ygate  ygate123  yserver
0_bin/Lnx64/tables/: user.h
3_Sdk/odbc/include/: sybdb.h
4_Public/: CommStruct.h  define.h
4_Public/structs/: config.h  tableinfo.h
5_Comm/: CMakeLists.txt  bakkkkk  bakkkkk2  core.cpp  core.h  msg.cpp  msg.h  odbc.cpp  odbc.h  praseconfig.cpp  praseconfig.h  tools.cpp  tools.h  ystream.cpp  ystream.h
7_main/AutoTable2Code/: CMakeLists.txt  auto2code.cpp  auto2code.h  main.cpp  mystream.h
7_main/amqp_demo/: CMakeLists.txt  main.cpp
7_main/client_demo/: main.cpp
7_main/libevent_demo/: CMakeLists.txt  eventbase.h  eventloop.h  main.bak  main.cpp
7_main/odbc-demo/: CMakeLists.txt  main.cpp
7_main/server/: CMakeLists.txt  main.cpp  tcpconnection.h  tcpserver.h
7_main/spdlog_demo/: CMakeLists.txt  main.cpp
7_main/spider/: CMakeLists.txt  main.cpp
7_main/testdemo/: CMakeLists.txt
7_main/tinyxml_demo/: CMakeLists.txt  main.cpp
7_main/ygate/: CMakeLists.txt  encrypt  main.cpp  tcpconnection.h  tcpserver.h
7_main/yserver/: CMakeLists.txt  bak1  main.cpp  tcpconnection.h  tcpserver.h
7_main/yui_gtest/: CMakeLists.txt  main.cpp
tables/: user.h  user_vip.h
tools/AutoSql/: AutoTable2Code  example.xml
tools/AutoSql/tables/: user_vip.h
(+6 files in other folders)
